--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,4 +41,4 @@ test_script:
   - b2 libs/smart_ptr/test toolset=msvc-9.0,msvc-10.0,msvc-11.0,msvc-14.0
 
 artifacts:
-  - path: bootstrap.log
+  - path: ..\boost-root\bootstrap.log
