--- a/.travis.yml
+++ b/.travis.yml
@@ -285,7 +285,7 @@ matrix:
       env: TOOLSET=clang COMPILER=clang++ CXXSTD=c++1z
 
 install:
-  - BOOST_BRANCH=develop && [ "$TRAVIS_BRANCH" == "master" ] && BOOST_BRANCH=master
+  - BOOST_BRANCH=develop && [ "$TRAVIS_BRANCH" == "master" ] && BOOST_BRANCH=master || true
   - cd ..
   - git clone -b $BOOST_BRANCH https://github.com/boostorg/boost.git boost-root
   - cd boost-root
