Execute bootstrap in subshell on Appveyor to preserve TOOLSET

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -50,7 +50,7 @@ install:
   - git submodule init tools/build
   - git submodule update
   - xcopy /s /e /q %APPVEYOR_BUILD_FOLDER% libs\smart_ptr
-  - bootstrap
+  - cmd /c bootstrap
   - b2 headers
 
 build: off
