--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,6 +47,7 @@ install:
   - git submodule init libs/static_assert
   - git submodule init libs/throw_exception
   - git submodule init libs/type_traits
+  - git submodule init libs/winapi
   - git submodule init tools/build
   - git submodule update
   - xcopy /s /e /q %APPVEYOR_BUILD_FOLDER% libs\smart_ptr
