Add VS2017 /std:c++17 to Appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,6 +26,10 @@ environment:
       TOOLSET: msvc-14.0
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOOLSET: msvc-14.1
+      CXXSTD: 14
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      TOOLSET: msvc-14.1
+      CXXSTD: 17
 
 install:
   - set BOOST_BRANCH=develop
@@ -56,4 +60,5 @@ install:
 build: off
 
 test_script:
-  - b2 libs/smart_ptr/test toolset=%TOOLSET%
+  - if not "%CXXSTD%" == "" set CXXSTD=cxxstd=%CXXSTD%
+  - b2 libs/smart_ptr/test toolset=%TOOLSET% %CXXSTD%
