Add -j 3 to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -202,7 +202,7 @@ install:
 script:
   - |-
     echo "using $TOOLSET : : $COMPILER ;" > ~/user-config.jam
-  - ./b2 libs/smart_ptr/test toolset=$TOOLSET cxxstd=$CXXSTD
+  - ./b2 -j 3 libs/smart_ptr/test toolset=$TOOLSET cxxstd=$CXXSTD
 
 notifications:
   email:
