--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,24 +32,23 @@ install:
   - git submodule init libs/assert
   - git submodule init libs/atomic
   - git submodule init libs/config
+  - git submodule init libs/container_hash
   - git submodule init libs/core
-  - git submodule init libs/detail
-  - git submodule init libs/functional
-  - git submodule init libs/integer
   - git submodule init libs/move
   - git submodule init libs/predef
-  - git submodule init libs/preprocessor
   - git submodule init libs/static_assert
   - git submodule init libs/throw_exception
   - git submodule init libs/type_traits
+  - git submodule init libs/detail
+  - git submodule init libs/integer
   - git submodule init tools/build
   - git submodule update
   - xcopy /s /e /q %APPVEYOR_BUILD_FOLDER% libs\smart_ptr
   - cmd /c bootstrap
-  - b2 headers
+  - b2 -d0 headers
 
 build: off
 
 test_script:
   - if not "%CXXSTD%" == "" set CXXSTD=cxxstd=%CXXSTD%
-  - b2 -j 3 libs/smart_ptr/test toolset=%TOOLSET% %CXXSTD%
+  - b2 -j3 libs/smart_ptr/test toolset=%TOOLSET% %CXXSTD%
