--- a/test/cmake_install_test/CMakeLists.txt
+++ b/test/cmake_install_test/CMakeLists.txt
@@ -6,14 +6,8 @@ cmake_minimum_required(VERSION 3.5...3.16)
 
 project(cmake_subdir_test LANGUAGES CXX)
 
-add_subdirectory(../.. boostorg/smart_ptr)
-add_subdirectory(../../../assert boostorg/assert)
-add_subdirectory(../../../config boostorg/config)
-add_subdirectory(../../../core boostorg/core)
-add_subdirectory(../../../move boostorg/move)
-add_subdirectory(../../../static_assert boostorg/static_assert)
-add_subdirectory(../../../throw_exception boostorg/throw_exception)
-add_subdirectory(../../../type_traits boostorg/type_traits)
+find_package(boost_smart_ptr REQUIRED)
+find_package(boost_core REQUIRED)
 
 add_executable(quick ../quick.cpp)
 target_link_libraries(quick Boost::smart_ptr Boost::core)
