Update submodule tools/cmake on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -370,6 +370,7 @@ install:
   - git submodule init tools/build
   - git submodule init libs/headers
   - git submodule init tools/boost_install
+  - git submodule init tools/cmake
   - git submodule update --jobs 3
   - cp -r $TRAVIS_BUILD_DIR/* libs/smart_ptr
   - ./bootstrap.sh
