--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,10 @@ matrix:
       compiler: g++
       env: TOOLSET=gcc COMPILER=g++ CXXSTD=03,11,14
 
+    - os: freebsd
+      compiler: clang++
+      env: TOOLSET=clang COMPILER=clang++ CXXSTD=03,11,14,17,2a
+
     - os: linux
       compiler: g++-4.4
       env: TOOLSET=gcc COMPILER=g++-4.4 CXXSTD=98,0x
