Update submodule libs/bind on Travis/Appveyor

--- a/.travis.yml
+++ b/.travis.yml
@@ -425,6 +425,7 @@ install:
   - git submodule init tools/boost_install
   - git submodule init tools/cmake
   - git submodule init libs/preprocessor
+  - git submodule init libs/bind
   - git submodule update # no --jobs 3 on non-amd64
   - cp -r $TRAVIS_BUILD_DIR/* libs/smart_ptr
   - ./bootstrap.sh
