Remove boost_install call from CMakeLists.txt

--- a/.travis.yml
+++ b/.travis.yml
@@ -394,6 +394,7 @@ matrix:
     - os: linux
       env: CMAKE_INSTALL_TEST=1
       script:
+        - pip install --user cmake
         - mkdir __build__ && cd __build__
         - cmake -DBOOST_ENABLE_CMAKE=1 -DBoost_VERBOSE=1 -DBOOST_INCLUDE_LIBRARIES=smart_ptr -DBUILD_TESTING=OFF -DCMAKE_INSTALL_PREFIX=~/.local ..
         - cmake --build . --target install
