--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,10 @@ jobs:
           - toolset: gcc-10
             cxxstd: "03,11,14,17,2a"
             os: ubuntu-18.04
+          - toolset: gcc-11
+            cxxstd: "03,11,14,17,2a"
+            os: ubuntu-18.04
+            install: g++-11
           - toolset: clang
             compiler: clang++-3.5
             cxxstd: "03,11"
@@ -101,7 +105,7 @@ jobs:
             install: clang-8
           - toolset: clang
             compiler: clang++-9
-            cxxstd: "03,11,14,17,2a"
+            cxxstd: "03,11,14,17"
             os: ubuntu-20.04
           - toolset: clang
             compiler: clang++-10
@@ -109,6 +113,10 @@ jobs:
             os: ubuntu-20.04
           - toolset: clang
             compiler: clang++-11
+            cxxstd: "03,11,14,17,2a"
+            os: ubuntu-20.04
+          - toolset: clang
+            compiler: clang++-12
             cxxstd: "03,11,14,17,2a"
             os: ubuntu-20.04
           - toolset: clang
